fix: spiner loading z-index

--- a/src/1-Libraries/Web.Blazor.Server/wwwroot/css/loading.css
+++ b/src/1-Libraries/Web.Blazor.Server/wwwroot/css/loading.css
@@ -2,7 +2,7 @@
 /*https://codepen.io/devilooper/pen/gOPYMjr*/
 .spinner-loading {
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     height: 2em;
     width: 2em;
     overflow: show;
